Simple navigation bar - only css

--- a/Learning-Materials/Tanvir/css/style.css
+++ b/Learning-Materials/Tanvir/css/style.css
@@ -2,16 +2,69 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    /* border: 1px solid red; */
 }
-
 :root{
     --var1 : #758A93;
     --var2 : #ECD5BC;
     --var3 : #E9B63B;
     --var4 : #C66E52;
 }
-
 body{
     background-color: #f1f1f1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+header{
+    background-color: var(--var1);
+    /* 
+    ----ki ki korte hobe ---
+    1.  inline - navigation link
+    2.  highlight - login button
+    3.  Make it responsive
+    */
+    min-width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+nav{
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.logo{
+    width: 100%
+}
+/* ham-menu */
+.links{
+    width: 100%;
+}
+.links ul{
+    display: flex;
+    list-style: none;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.links ul li{
+    padding:1rem;
     
 }
+
+.links ul li:hover{
+    background-color:var(--var2);
+}
+
+
+main{
+    background-color: white;
+    
+    width: 80%;
+    min-height: 150vh;
+}
+
