--- a/src/stylesheets/header.css
+++ b/src/stylesheets/header.css
@@ -19,7 +19,7 @@
 
 */
 header {
-    background-color: #333;
+    background-color: #25952b;
     color: white;
 }
 
@@ -43,9 +43,10 @@ nav {
     font-size: 1rem;
     padding: .5rem;
     border: none;
-    border-radius: .3rem;
-    width: max-content;
+    border-radius: 1rem;
+    /* width: max-content; */
     width: 100%;
+    /* outline: none; */
 }
 .menu-icon{
     display: none; /* Now it's invisible but in mobile view it will be visible */
