--- a/src/stylesheets/mainSection.css
+++ b/src/stylesheets/mainSection.css
@@ -1,5 +1,6 @@
 main{
     background-color: red;
+    /* border: 2px solid green; */
     height: calc(100vh - 4.375rem);
     display: flex;
     flex-direction: row;
