--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -12,6 +12,7 @@
 body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #f4f4f4;
-    color: #333;
+    /* color: #333; */
+    color:var(--body_text);
     line-height: 1.6;
 }
