--- a/src/stylesheets/productTiles.css
+++ b/src/stylesheets/productTiles.css
@@ -26,6 +26,10 @@
     display: flex;
     flex-direction: row;
 }
+
+.tile ul li p{
+   color:var(--body_text);
+}
 .tile ul li:hover{
     transform: translateY(-5px);
     box-shadow: 0 4px 10px rgba(0,0,0,0.2);
