--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -1,6 +1,7 @@
 @import url('./header.css');
 @import url('./mainSection.css');
 @import url('./productTiles.css');
+@import url(./forms.css);
 *{
     padding: 0;
     margin: 0;
